(Add) First part of the program, with button, background, objects

--- a/lib/tools/Makefile
+++ b/lib/tools/Makefile
@@ -13,6 +13,7 @@ SRC	=	my_putchar.c		\
 		my_getnbr.c		\
 		my_str_isnum.c		\
 		my_putstr.c		\
+		my_strlen.c		\
 		my_put_nbr.c
 
 OBJ	=	$(SRC:.c=.o)
